--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
-APP_NAME=Laravel
+###############################################################################
+# Brewtopia - Environment Template
+# This file contains no real secrets. Each developer must create their own .env
+# using these placeholders. Secrets must never be committed to Git.
+###############################################################################
+
+APP_NAME=Brewtopia
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:CHANGE_ME_TO_A_REAL_KEY
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,13 +14,20 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+###############################################################################
+# Database configuration (values differ per developer)
+###############################################################################
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=brewtopia
+DB_USERNAME=your_db_username
+DB_PASSWORD=your_db_password
 
+###############################################################################
+# Application Services
+###############################################################################
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
@@ -28,21 +41,31 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+###############################################################################
+# Mail configuration (never commit real credentials)
+###############################################################################
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
+MAIL_HOST=localhost
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="noreply@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
+MAIL_ADMIN_ADDRESS="admin@example.com"
 
+###############################################################################
+# AWS S3 / Cloud file storage (optional)
+###############################################################################
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+###############################################################################
+# Pusher / WebSockets placeholders
+###############################################################################
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
