chore(security): ignore logs and runtime storage to avoid leaking sensitive data

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+
+# Runtime and log files (may contain sensitive data / PII)
+storage/logs/*.log
+storage/framework/cache/*
+storage/framework/sessions/*
+storage/framework/views/*
